# spark-bootcamp

./: .gitignore  .pre-commit-config.yaml  README.md
lessons/lesson-01-fundamentals/: .env.example  .gitignore  Makefile  README.md  notebook.ipynb  pyproject.toml
lessons/lesson-01-fundamentals/data/: numbers.csv  sample_data.txt
lessons/lesson-01-fundamentals/exercises/: exercise_1.py  exercise_2.py  exercise_3.py
lessons/lesson-01-fundamentals/solutions/: exercise_1_solution.py  exercise_2_solution.py  exercise_3_solution.py
lessons/lesson-01-fundamentals/tests/: test_basics.py  test_exercises.py
lessons/lesson-02-dataframes/: Makefile  README.md  notebook.ipynb  pyproject.toml
lessons/lesson-02-dataframes/datasets/: __init__.py  sample_data.py
lessons/lesson-02-dataframes/exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py
lessons/lesson-02-dataframes/solutions/: exercise_1_solution.py  exercise_2_solution.py  exercise_3_solution.py  exercise_4_solution.py  exercise_5_solution.py  exercise_6_solution.py  exercise_7_solution.py
lessons/lesson-02-dataframes/tests/: conftest.py  test_datasets.py  test_exercise_1.py  test_exercise_solutions.py
lessons/lesson-03-local-development/: Makefile  README.md  notebook.ipynb  pyproject.toml
lessons/lesson-03-local-development/examples/docker/: Dockerfile.dev  docker-compose.dev.yml
lessons/lesson-03-local-development/examples/github-actions/: ci.yml
lessons/lesson-03-local-development/examples/monitoring/: prometheus.yml
lessons/lesson-03-local-development/examples/pre-commit-hooks/: .pre-commit-config.yaml
lessons/lesson-03-local-development/exercises/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py
lessons/lesson-03-local-development/my-spark-project/: .env.example  .gitignore  .yamllint.yaml  Makefile  README.md  pyproject.toml
lessons/lesson-03-local-development/my-spark-project/.github/workflows/: ci.yaml
lessons/lesson-03-local-development/my-spark-project/docs/: PRE_COMMIT_SETUP.md
lessons/lesson-03-local-development/my-spark-project/scripts/: demo.py  run_etl.py
lessons/lesson-03-local-development/my-spark-project/src/: __init__.py
lessons/lesson-03-local-development/my-spark-project/src/config/: __init__.py  settings.py
lessons/lesson-03-local-development/my-spark-project/src/jobs/: __init__.py  base_job.py  etl_job.py
lessons/lesson-03-local-development/my-spark-project/src/schemas/: __init__.py  analytics_schema.py  base_schema.py  customer_schema.py  data_quality_schema.py
lessons/lesson-03-local-development/my-spark-project/src/transformations/: __init__.py  aggregations.py  base_aggregations.py  base_cleaning.py  cleaning.py  customer_transformations.py  product_transformations.py  sales_transformations.py
lessons/lesson-03-local-development/my-spark-project/src/utils/: file_utils.py  spark_utils.py
lessons/lesson-03-local-development/my-spark-project/tests/: __init__.py  conftest.py
lessons/lesson-03-local-development/my-spark-project/tests/integration/: test_etl_job.py
lessons/lesson-03-local-development/my-spark-project/tests/unit/: test_data_aggregations.py  test_data_cleaning.py
lessons/lesson-03-local-development/solutions/: exercise_1_solution.py  exercise_2_solution.py  exercise_3_solution.py  exercise_4_solution.py
lessons/lesson-03-local-development/templates/data-analysis/: pyproject.toml
lessons/lesson-03-local-development/templates/etl-pipeline/: README.md  pyproject.toml
lessons/lesson-03-local-development/templates/etl-pipeline/etl_pipeline/: __init__.py  cli.py
lessons/lesson-03-local-development/templates/etl-pipeline/etl_pipeline/jobs/: base.py
lessons/lesson-03-local-development/templates/streaming-pipeline/: pyproject.toml
lessons/lesson-03-local-development/tests/: conftest.py
lessons/lesson-03-local-development/tests/integration/: test_etl_pipeline.py
lessons/lesson-03-local-development/tests/unit/: test_data_quality.py
lessons/lesson_01_fundamentals/: .env.example  .gitignore  Makefile  README.md  __init__.py  notebook.ipynb  pyproject.toml
lessons/lesson_01_fundamentals/data/: numbers.csv
lessons/lesson_02_dataframes/: README.md  __init__.py  notebook.ipynb  pyproject.toml
lessons/lesson_02_dataframes/datasets/: __init__.py  sample_data.py
lessons/lesson_02_dataframes/exercises/: __init__.py  exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py
lessons/lesson_02_dataframes/solutions/: __init__.py  exercise_1_solution.py  exercise_2_solution.py  exercise_3_solution.py  exercise_4_solution.py  exercise_5_solution.py  exercise_6_solution.py  exercise_7_solution.py
lessons/lesson_02_dataframes/tests/: __init__.py  conftest.py  test_exercise_1.py  test_exercise_solutions.py
lessons/lesson_03_local_development/: .gitignore  Makefile  README.md  notebook.ipynb
lessons/lesson_03_local_development/my-spark-project/: .env.example  .gitignore  .yamllint.yaml  Makefile  README.md  pyproject.toml
lessons/lesson_03_local_development/my-spark-project/.github/workflows/: ci.yaml
lessons/lesson_03_local_development/my-spark-project/docs/: PRE_COMMIT_SETUP.md
lessons/lesson_03_local_development/my-spark-project/scripts/: __init__.py  demo.py  run_etl.py
lessons/lesson_03_local_development/my-spark-project/src/config/: settings.py
lessons/lesson_03_local_development/my-spark-project/src/jobs/: base_job.py  etl_job.py
lessons/lesson_03_local_development/my-spark-project/src/schemas/: customer_schema.py  product_schema.py  sales_schema.py
lessons/lesson_03_local_development/my-spark-project/src/transformations/: aggregations.py  base_aggregations.py  base_cleaning.py  sales_transformations.py
lessons/lesson_03_local_development/my-spark-project/src/utils/: __init__.py  file_utils.py  spark_utils.py
lessons/lesson_03_local_development/my-spark-project/tests/integration/: test_etl_job.py
lessons/lesson_03_local_development/my-spark-project/tests/unit/: test_data_aggregations.py
(+9 files in other folders)
