[project]
name = "spark-bootcamp-lesson-03"
version = "0.1.0"
description = "Local Development Setup - Lesson 3 of the Spark Bootcamp"
authors = [
    {name = "Spark Bootcamp", email = "bootcamp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"

dependencies = [
    # Core Spark dependencies for notebook
    "pyspark>=3.5.0,<3.6.0",

    # Jupyter and notebook dependencies
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",

    # Data science essentials for notebook examples
    "pandas>=2.1.1",
    "numpy<2.0.0",

    # Configuration management for examples
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

